@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-version = '0.8.1'
+version = '0.8.2'
 
 tasks.withType(JavaCompile) {
 	sourceCompatibility = 11
@@ -37,16 +37,16 @@ dependencies {
 	implementation 'com.github.sommeri:less4j:1.17.2'
 	implementation 'org.freemarker:freemarker:2.3.30'
 	implementation 'org.nanohttpd:nanohttpd:2.3.1'
-	implementation 'net.java.dev.jna:jna:5.5.0'
+	implementation 'net.java.dev.jna:jna:5.6.0'
 	implementation 'org.kordamp.ikonli:ikonli-javafx:11.5.0'
 	implementation 'org.kordamp.ikonli:ikonli-materialdesign-pack:11.5.0'
 	implementation 'com.github.luccappellaro:jzopfli:0.0.4'
-	implementation 'com.esotericsoftware.yamlbeans:yamlbeans:1.14'
+	implementation 'com.esotericsoftware.yamlbeans:yamlbeans:1.15'
 
 	implementation 'net.osdn.blogs.flexmark.ext:flexmark-ext-highlight:0.3.1'
 	implementation 'net.osdn.blogs.flexmark.ext:flexmark-ext-inline-tags:0.3.1'
 	implementation 'net.osdn.util.io:auto-detect-reader:0.1.1'
-	implementation 'net.osdn.util.rest.client:rest-client-util:0.2.7'
+	implementation 'net.osdn.util.rest.client:rest-client-util:0.3.2'
 }
 
 defaultTasks 'clean', 'build', 'exewrap'
@@ -82,7 +82,7 @@ task createJavaRuntime(type: Exec, dependsOn: ['jar', 'copyLibraries']) {
 	setGroup("build")
 	setDescription("Create Java Runtime.")
 	workingDir "${buildDir}/package/"
-	commandLine 'cmd', '/c', 'CreateJRE.bat', "${jar.archiveFile.get()}", "lib", "-client"
+	commandLine 'cmd', '/c', 'CreateJRE.bat', "${jar.archiveFile.get()}", "lib", "-server"
 }
 
 task exewrap(type: Exec, dependsOn: 'jar') {
@@ -92,7 +92,7 @@ task exewrap(type: Exec, dependsOn: 'jar') {
 	args "-A", "x64",
 		"-g",
 		"-t", "11",
-		"-a", "-XX:TieredStopAtLevel=1 -XX:+UseSerialGC -XX:CICompilerCount=1 -Xverify:none -Xms128m -Xmx1024m",
+		"-a", "-Xms128m -Xmx1024m",
 		"-L", "lib",
 		"-e", "SHARED",
 		"-j", "${jar.archiveFile.get()}",
